--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,8 +6,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "yarn build && npx thirdweb@latest upload dist"
   },
   "dependencies": {
     "@thirdweb-dev/react": "^3",
